updates student and teacher

--- a/Teacher/home.html
+++ b/Teacher/home.html
@@ -146,20 +146,20 @@
                                        
                                        <div class="row"><br> 
                                            <div class="col-sm-12"><br>
-                                    <h4>terms and conditions</h4><br>
+                                    <h4><b>terms and conditions</b></h4><br>
                                      <p style="text-align: justify" >* Only the students who have paid the Event Fee of Rs. 200/- shall be Registered.</p><br>
-                                    <p style="text-align: justify" >* This form is just for Regular Events Registrations , Do not Register Students for <label style="color: #ff4528; font-weight: 600">MEGA EVENTS</label> .</p><br>
-                                               <p style="text-align: justify;">* Mega Events Includes <label style="color: #ff4528;font-weight: 600">BATTLE OF BANDS and FLOUNCE</label>. Students can Register directly through TIARA APP.</p>
+                                    <p style="text-align: justify" >* This form is just for Regular Events Registrations , Do not Register Students for <label style="color: #c82df7; font-weight: 600">MEGA EVENTS</label> .</p><br>
+                                               <p style="text-align: justify;">* Mega Events Includes <label style="color: #c82df7;font-weight: 600">BATTLE OF BANDS and FLOUNCE</label>. Students can Register directly through TIARA APP.</p>
                                                <br>
-                                                 <p style="text-align: justify;">* Confirm the Student's <label style="color: #ff4528;font-weight: 600"> Email ID </label> before Registration as <label style="color: #ff4528;font-weight: 600"> SID </label> will be shared over Email. Students should use this SID for Events Registartion in TIARA APP</p>
+                                                 <p style="text-align: justify;">* Confirm the Student's <label style="color: #c82df7;font-weight: 600"> Email ID </label> before Registration as <label style="color: #c82df7;font-weight: 600"> SID </label> will be shared over Email. Students should use this SID for Events Registartion in TIARA APP</p>
                                                <br>
-                                                <p style="text-align: justify;">* The Registrations Cannot be Cancelled. Kindly Check the Details before Registering a Student and ask for his/her Confirmation.</p>
+                                                <p style="text-align: justify;">* The Registrations cannot be cancelled. Kindly Check the details before registering a student and ask for his/her confirmation.</p>
                                                <br>
                                                <p style="text-align: justify;">* We are not responsible for any wrong Entries made from the user's end and holds all right to cancel a registartion in case the details are incomplete or wrong.</p>
                                                <br>
                                                <p style="text-align: justify;">* The ID cards on the Day of Event will be provided based on the total number of students registered from each college. Students who do not register through college will not receive any ID Cards</p>
                                                <br>
-                                               <p style="text-align: justify">* For any Query and Problem with Registartions Contact us at <label style="color: #ff4528">deltasdevops@gmail.com</label>.</p>
+                                               <p style="text-align: justify">* For any Query and Problem with Registartions Contact us at <label style="color: #c82df7">deltasdevops@gmail.com</label>.</p>
                                                 <br>
                                                <button id="hi" class="close1" >CLOSE</button>
                                                <br><br>
@@ -176,7 +176,7 @@
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 10; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 50px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -188,12 +188,12 @@
 
 /* Modal Content */
 .modal-content {
-  background-color: #000;
+  background-color: #fff;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-    border: #e62b1e;
+    border: #c82df7;
     border-style: solid;
     border-width: 2px;
 }
@@ -201,19 +201,19 @@
  
   
              h4{
-                 color: #ff4528;
+                 color: #c82df7;
                  text-transform: uppercase;
              }
              p{
-                 color: white;
+                 color: #000;
              }
              #hi{
                  padding: 10px 30px 10px 30px ;
                  font-weight: 400;
                  color: white;
-                 background-color: #ff4528;
+                 background-color: #c82df7;
                  border: solid 0px white;
-                 box-shadow: 5px 5px white;
+                 box-shadow: 0px 0px 15px #c82df7;
              }
             </style>
             <script>
