--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -135,9 +135,9 @@
 					<img src="images/untitled.png" class="slide">
 				</div>
 				<div class="col-md-6">
-					<p style="text-align: justify;">1. Use this form to login to the Registration Panel with the USER ID and PASSWORD shared by our Student Co-odinators.</p>
+					<p style="text-align: justify;">1. Use this form to login to the Registration Panel with the USER ID and PASSWORD shared by SJEC Student Co-odinators.</p>
 					<br>
-					<p style="text-align: justify;">2. You can visit TIARA official website or access the HELP desk by clicking on icon at the end of the login page.</p>
+					<p style="text-align: justify;">2. You can visit TIARA official website or access the HELP desk by clicking on icon at the bottom of login page.</p>
 					<br>
 					<p style="text-align: justify;">3. If you are having trouble in login process contact <a style="color: black;">deltasdevops@gmail.com</a>.</p>
 					<br><br><br><br></div>
@@ -168,9 +168,9 @@
 				<div class="col-md-6">
 					<p style="text-align: justify;">1. The details of students who have registered will reflect in the table. </p>
 					<br>
-					<p style="text-align: justify;">2. You can also search for students who have registered from seacrh box. Incase the student's name is not present in the table then that student should be re-registered.</p>
+					<p style="text-align: justify;">2. You can also search for students who have registered from search box. Incase the student's name is not present in the table then that student must be re-registered.</p>
 					<br>
-					<p style="text-align: justify;">3. You can download the final list of students from GET PDF button.</p>
+					<p style="text-align: justify;">3. You can download the final list of students by clicking on GET PDF button.</p>
 					<br>
 					<p style="text-align: justify;">4. Any query regarding registrations or failed registration Contact : <a style="color: black;">deltasdevops@gmail.com</a>.</p>
 					<br>
