--- a/Student/Event.html
+++ b/Student/Event.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 	<title>Tiara'20 Events</title>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="-1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" href="images/icons/logo.jpg"/>
