add some fail safe

--- a/Student/Event.html
+++ b/Student/Event.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" oncontextmenu="return false">
 <head>
 	<title>Tiara'20 Events</title>
     <meta charset="UTF-8">
@@ -431,7 +431,7 @@
                     </div>
               <centre>  <div class="row">
                     <div class="col-md-4">
-                    <button class="adc" onclick="show()" id="cnf" style="background-image: linear-gradient(45deg,#ff4528,#ff4528)">CONFIRM</button>
+                    <button class="adc" id="cnf" style="background-image: linear-gradient(45deg,#ff4528,#ff4528)">CONFIRM</button>
                     </div>
                 <div class="col-md-4">
                     <button class="adt" id="add">ADD TEAM</button>
@@ -462,6 +462,7 @@
     </style>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
