--- a/Teacher/home.html
+++ b/Teacher/home.html
@@ -1,5 +1,5 @@
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" oncontextmenu="return false">
     <head>
         <title>Tiara'20 Register</title>
         <meta charset="UTF-8">
