--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" oncontextmenu="return false">
 <head>
 	<title>Tiara'20 Login</title>
 	<meta charset="UTF-8">
