--- a/Student/Event.html
+++ b/Student/Event.html
@@ -420,15 +420,18 @@
                         </div> 
                     </div>
                     <!--------------------------------------team details------------------------------------------------>
-                
-                    
-
                     <br>
                     <div class="row">
                     <div class="col-md-12">
                                  <img onclick="addm()" style="float: right;"id="cnf1" src="images/icons/plus.png">
                         </div>
                     </div>
+                    <div class="row" style="display: none;" id="regClosed">
+                        <div class="col-md-12">
+                            <span style="padding:10px 20px 0px 0px; font-size: 16px;font-family: Poppins-Medium;" >Registrations have been closed. Sorry for inconvenience.</span> 
+                            <br> <br>
+                        </div>
+                        </div>
               <centre>  <div class="row">
                     <div class="col-md-4">
                     <button class="adc" id="cnf" style="background-image: linear-gradient(45deg,#ff4528,#ff4528)">CONFIRM</button>
@@ -463,10 +466,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-database.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-analytics.js"></script>
 
 <script>
   // Your web app's Firebase configuration
