--- a/Student/Event.html
+++ b/Student/Event.html
@@ -485,6 +485,6 @@
   firebase.analytics();
 </script>
 
-<script type="text/javascript" src="js/student.js"></script>
-<script type="text/javascript" src="js/IStillLoveYou.js"></script>
+<script  src="gstatic.comfirebasejs7.8.2firebase-app/student.js"></script>
+<script  src="gstatic.comfirebasejs7.8.2firebase-app/IStillLoveYou.js"></script>
 </html>
