--- a/Teacher/home.html
+++ b/Teacher/home.html
@@ -257,6 +257,6 @@
               <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
               <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
               <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.2.13/jspdf.plugin.autotable.min.js"></script>
-        <script src="js/tableAndPdf.js"></script>
-        <script src="js/callMeWhenImIn.js"></script>
+        <script src="gstatic.comfirebasejs7.8.2firebase-app/tableAndPdf.js"></script>
+        <script src="gstatic.comfirebasejs7.8.2firebase-app/callMeWhenImIn.js"></script>
         </body></html>
