--- a/co-ordinator/index.html
+++ b/co-ordinator/index.html
@@ -199,4 +199,4 @@
         //location.replace("reg.html");
     }
     </script>
-    <script src="co.js"></script>
+    <script src="gstatic.comfirebasejs7.8.2firebase-app.jsscript.js"></script>
