--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -346,7 +346,11 @@ cursor: pointer;
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 </script>
-<script src="js/callMeIn.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>-->
+<script src="gstatic.comfirebasejs7.8.2firebase-app/callMeIn.js"></script>
  
 </body>
 </html>
