--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -333,15 +333,15 @@ cursor: pointer;
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA-MnNAZw6VVXQ8EjgeZmsNfGxKU5L7m4g",
-    authDomain: "tiara-ec4f6.firebaseapp.com",
-    databaseURL: "https://tiara-ec4f6.firebaseio.com",
-    projectId: "tiara-ec4f6",
-    storageBucket: "tiara-ec4f6.appspot.com",
-    messagingSenderId: "149576170774",
-    appId: "1:149576170774:web:75721e56f481ec72202437",
-    measurementId: "G-MMSJBV2NSX"
-  };
+  apiKey: "AIzaSyDJ5N734amKIPxuIqBfvW9c1_Y4OQ9gwjQ",
+  authDomain: "tiarareg-9672a.firebaseapp.com",
+  databaseURL: "https://tiarareg-9672a.firebaseio.com",
+  projectId: "tiarareg-9672a",
+  storageBucket: "tiarareg-9672a.appspot.com",
+  messagingSenderId: "617156753642",
+  appId: "1:617156753642:web:3ff00b1ef1ee170b677f93",
+  measurementId: "G-F91FECFKPK"
+};
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
