--- a/Teacher/home.html
+++ b/Teacher/home.html
@@ -109,7 +109,7 @@
 				 
 					 
                             <centre><div class="row">
-                                <div class="col-md-8"><span class="login100-form-title " style="padding:0px 20px 10px 0px;font-size: 30px;font-family: Poppins-Medium; " id="title_college">COLLEGE NAME </span></div>
+                                <div class="col-md-8"><span class="login100-form-title " style="padding:0px 20px 10px 0px;font-size: 30px;line-height: 1.3; font-family: Poppins-Medium; " id="title_college">COLLEGE NAME </span></div>
                                     <div class="col-md-4">
                                             <button class="logout" id="logout_btn">LOGOUT</button>
                                     </div>
