--- a/RegNew/Student/Event.html
+++ b/RegNew/Student/Event.html
@@ -576,5 +576,29 @@
                  border: solid 0px white;
                  border-radius: 2px;
               }
+
     </style>
+
+    <script>
+
+
+        
+        document.onkeydown = function(e) {
+  if(event.keyCode == 123) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+     return false;
+  }
+}
+    </script>
 </html>
