--- a/RegNew/Student/index.html
+++ b/RegNew/Student/index.html
@@ -2,6 +2,11 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tiara 2020</title>
     <link rel="icon" type="image/png" href="images/icons/logo.jpg"/>
