--- a/RegNew/Student/RegSelf.html
+++ b/RegNew/Student/RegSelf.html
@@ -88,7 +88,7 @@
 						  <span class="login100-form-title " style="padding:5px 5px 5px 5px ;font-size: 16px;font-family: Poppins-Medium; background-color: yellow;color: black" id="showM">Don't forget your college ID card on the day of event.</span>
 					</div>
 					
-					 <button style="width: 100%;background-color: #ff4528;padding: 10px 0px 10px 0px;box-shadow: 0px 0px 10px #000;color: white;font-weight: 500;">REGISTER STUDENT</button>
+					 <button style="width: 100%;background-color: #ff4528;padding: 10px 0px 10px 0px;box-shadow: 0px 0px 10px #000;color: white;font-weight: 500;" id="regStudent">REGISTER STUDENT</button>
                  <br><br>
                  <div style="margin-left: 30%;">
                  <button style="width: 60%;background-color: #ff4528;padding: 10px 10px 10px 10px;box-shadow: 0px 0px 10px #000;color: white;font-weight: 500;" onclick="location.replace('index.html')">GO BACK</button>
