--- a/RegNew/Student/RegSelfv1.html
+++ b/RegNew/Student/RegSelfv1.html
@@ -74,16 +74,14 @@
 						<span class="focus-input100" data-symbol="&#x2709;"></span>
 					</div>
 
-                    <div style="margin-top: 20px" class="wrap-input100 validate-input m-b-23" data-validate = "Event Type is reauired">
-                        <span class="label-input100"><b>College Name</b></span>
-                        <div  class="input100 drop">
-                            <datalist  id="collegeList" >
-                                <option id="o1">Example</option>
-                            </datalist>
-                            <input style="margin-top: 20px;" placeholder="Search your College" class="box " id="college"  autoComplete="on" list="collegeList"/> 
+                    <div style="margin-top: 20px" class="wrap-input100 validate-input" data-validate="Event Name is required">
+                        <span class="label-input100" ><b>College Name</b></span>
+                        <select style="border: solid 0px white;" class="input100 drop" id="collegeList" >
+                                <option></option>
+                                </select> 
+                                <span class="focus-input100" data-symbol="&#x2616;"></span>
                         </div>
-						<span class="focus-input100" data-symbol="&#x2616;"></span>
-					</div>
+		
                 <div style="margin-top: 30px;">
                     <input type="checkbox" style=" width: 20px ;height: 20px" id="checked" onclick="mega()" ><span style="padding-left:10px;color: black;"><b>I Agree to<a style="padding-left:10px;font-size: 16px; color: red;cursor:pointer" onclick="disp(0,'hola')" >Terms and Condition</a></b></span>
                     </div>
@@ -157,9 +155,9 @@
                                            <div class="col-sm-12"><br>
                                     <h4>Attention !</h4><br>
                                 
-                                    <p style="text-align: justify; ">You have successfully registered for TIARA 2K20. Check your email for <a style="color: #ff4528;">SID</a></p><br>
+                                    <p style="text-align: justify; ">You have successfully registered for TIARA 2K20. Check your email for <a style="color: #ff4528;">SID</a>.</p><br>
                                                
-                                               <button id="hi" onclick="location.replace('index.html')">OK</button>
+                                               <button style="float: left;" id="hi" onclick="location.replace('index.html')">OK</button>
                                                <br><br>
                                            </div>
                                     </div>
