--- a/REGISTERv1.0/index.html
+++ b/REGISTERv1.0/index.html
@@ -30,7 +30,7 @@
     <script src="gstatic.comfirebasejs7.8.2firebase-app/aj_phir_jine_ki_tamanna_hai.js"></script>
 
 </head>
-    <body >
+    <body onload=" getStudent() ">
  <div id="loading-spinner">
             <div class="limiter">
                 <div class="container-login100" style="background-image: linear-gradient(90deg,#1ec1e2,#e713fd);">
@@ -71,7 +71,7 @@
                                <button onclick="myStudent()" class="pdfbtn" style="width: 90%;padding-top: 19px;border-radius: 5px; padding-bottom: 19px;">Search Student</button>
                            </div>
                        <div class="col-md-4">
-                        <button style="float: right;border-radius: 5px;background-color: red;" class ="pdfbtn" id="pdf" ><img src="images/print.png" style="padding-right: 20px;" > Get PDF</button>
+                        <button style="float: right;border-radius: 5px;background-color: dodgerblue;" class ="pdfbtn" id="pdf" ><img src="images/print.png" style="padding-right: 20px;" > Get PDF</button>
                        </div>
                         
                        </div> 
