--- a/RegNew/Student/index.html
+++ b/RegNew/Student/index.html
@@ -23,7 +23,7 @@
    
   <h1>Tiara 2020</h1><br>
     <span id="a1">Tiara</span><span id="a2">2020</span>
-    <button  onclick="disp(0)" id="adc" >CLICK TO PROCEED</button><br><br><br>
+    <button  onclick="disp(0)" id="adc" >Click to Proceed</button><br><br><br>
    
     </div>
 <svg>
@@ -51,6 +51,8 @@
                                                 <p style="text-align: justify; " >* You need a valid SID (Student Identification) to register for events.</p><br>
                                                            <p style="text-align: justify;">* SID can be obtained over email once the student registers through the App.</p>
                                                            <br>
+                                                           <p style="text-align: justify;">* For queries regarding Registration Contact: <span style="color: #ff4528;font-weight: 600;">+91 7250 369069</span></p>
+                                                           <br>
                                                            <button onclick="location.replace('Event.html')" id="hiii" >I UNDERSTAND</button>
                                                            <br><br>
                                                        </div><br>
@@ -61,6 +63,12 @@
                                               <p style="text-align: justify;color: #ff4528;font-weight: 600;">New Entry ?? You can Register here.</p>
                                                            <br>
                                               <button id="hii" onclick="location.replace('RegSelf.html')" >STUDENT REGISTRATION</button>
+                                            </div>
+                                          </div>
+                                          <br><br>
+                                          <div class="row">
+                                            <div class="col-md-12">
+                                              <a style="color:white;text-decoration: none;font-size: 14px;" href="https://drive.google.com/open?id=1kwW3k83VH_v9bu27748ilroCH2jl13wr8nUm697vkGc">Any Feedback Regarding Registration Process?<span style="font-weight: 600; color: #ff4528;"> CLICK HERE </span></a>
                                             </div>
                                           </div>
                                     </div>
@@ -98,7 +106,7 @@
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 10; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 70px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -142,7 +150,7 @@
                  color: white;
              }
              #hi{
-                 padding: 13px 30px 10px 30px ;
+                 padding: 10px 30px 10px 30px ;
                  font-weight: 600;
                  color: white;
                  background-color: #ff4528;
@@ -151,7 +159,7 @@
                  box-shadow: 0px 0px 10px #FF0059;
               }
               #hii{
-                 padding: 13px 30px 10px 30px ;
+                 padding: 10px 30px 10px 30px ;
                  font-weight: 600;
                  color: white;
                  background-color: #ff4528;
